# ghost-story-factory

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_V3_SUMMARY.md  DOCUMENTATION_INDEX.md  ENV_EXAMPLE.md  FINAL_INTEGRATION_REPORT.md  FINAL_SUMMARY.md  GAME_ENGINE.md  GAME_ENGINE_USAGE.md  HYBRID_APPROACH.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SESSION_CACHE_IMPLEMENTATION.md  USAGE.md  WORKFLOW.md  check_progress.sh  demo.md  demo_game.py  game_engine.py  generate_full_story.py  generate_full_story.sh  generate_parallel.py  generate_smart_parallel.py  get-story.md  load_env.sh  play_game.py  play_game_correct.py  play_game_full.py  play_game_pregenerated.py  play_now.sh  pyproject.toml  pytest.ini  requirements-dev.txt  (+23 more)
database/: ghost_stories.db  ghost_stories_test.db
deliverables/: README-如何阅读.md
deliverables/程序-武汉/: 武汉_story.md
docs/: BUG_FIX_CHARACTER_EXTRACTION.md  CHECKPOINT_FEATURE_COMPLETE.md  CHECKPOINT_RESUME.md  COMMANDS.md  INDEX.md  INSTALLATION.md  OPTIMIZATION_SUMMARY.md  PARALLEL_GENERATION.md  PREGENERATION_DESIGN.md  PROTAGONIST_CONSTRAINTS.md  QUICK_START.md  TEST_SUITE_SUMMARY.md
docs/architecture/: ADR-001-plot-skeleton-pipeline.md  ADR-002-v4-default-pipeline.md  ADR-003-v4-workflow-staging-and-agents.md  ARCHITECTURE.md  GAME_ENGINE.md  NEW_PIPELINE.md  STORY_PIPELINE_V4.md
docs/archive/: FULL_GAME_GUIDE.md  GAME_ENGINE_README.md  GAME_LENGTH_ISSUE.md  IMPLEMENTATION_COMPLETE.md  PLAYTIME_ESTIMATION.md  PRELOAD_OPTIMIZATION.md  PROJECT_STRUCTURE.md  README_FULL_GAME.md  START_GAME.md  TEST_RESULTS.md
docs/guides/: BRANCH_GENERATION.md  QUICK_REFERENCE.md  TESTING.md  USAGE.md  WORKFLOW.md
docs/legacy/: get-story.md  get-struct.md  lore.md  role-beats.md
docs/specs/: CLI_GAME_ROADMAP.md  SPEC.md  SPEC_TODO.md  SPEC_V3.md
docs/tasks/: TASK_CHOICE_EVAL_BMAD.md  TASK_CHOICE_POINTS_QUALITY.md  TASK_PROGRESS_VISUALIZATION.md  TASK_STORY_STRUCTURE.md  TASK_V4_DEFAULT_PIPELINE.md  TASK_V4_SHANGHAI_EXAMPLE.md  (+1 more)
examples/: README.md
saves/: demo_save.save  test.save
scripts/: clean.sh  db_inspect.sh  dev-run.sh  fmt.sh  organize_root.sh
sql/: schema.sql
templates/: 00-architecture.md  00-index.md  GDD.prompt.md  README.md  branch-1.design.md  branch-1.prompt.md  branch-2.design.md  branch-2.example.md  branch-2.propmt.md  branch-generic.design.md  branch-generic.prompt.md  choice-points.example.md  choice-points.prompt.md  intent-mapping.prompt.md  lore-v1.example.md  lore-v1.prompt.md  lore-v2.design.md  lore-v2.prompt.md  main-thread.design.md  main-thread.prompt.md  plot-skeleton.prompt.md  protagonist.example.md  protagonist.prompt.md  runtime-response.design.md  runtime-response.prompt.md  state-management.prompt.md
tests/: README.md  test_choice_evaluator_bmad.py  test_choices_llm_wrapper.py  test_game_engine.py  test_skeleton_generator.py  test_skeleton_model.py  test_story_generator_modes.py  test_story_report.py  test_text_filler.py  test_tree_builder_guided.py  test_view_tree_progress.py
tools/: check_structure_metrics.py  eval_choice_quality.py  generate_mvp.py  repair_dialogue_trees.py  report_story_structure.py  run_all_tests.py  view_tree_progress.py
范文/: 00-architecture.md  00-index.md  GDD.design.md  GDD.prompt.md  README.md  branch-1.design.md  branch-1.example.md  branch-1.prompt.md  branch-2.design.md  branch-2.propmt.md  choice-points.design.md  intent-mapping.design.md  intent-mapping.example.md  lore-v1.design.md  lore-v1.prompt.md  lore-v2.example.md  main-thread.design.md  main-thread.example.md  protagonist.design.md  protagonist.example.md  runtime-response.design.md  runtime-response.example.md  state-management.design.md  state-management.example.md
(+50 files in other folders)
