[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ghost-story-factory"
version = "1.0.0"
description = "一个 AI 灵异故事素材收集助手 (MCP-CLI)"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your@email.com" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

dependencies = [
    "crewai>=0.30.0",
    "langchain-community",
    "langchain-google-community",
    "python-dotenv",
    "langchain-openai",
]

[project.scripts]
get-story = "ghost_story_factory.main:run"

[project.urls]
Homepage = "https://github.com/your-username/ghost-story-factory"
"Bug Tracker" = "https://github.com/your-username/ghost-story-factory/issues"

